force-app/main/default/objects/Poliza__c/Poliza__c.object-meta.xml
<CustomObject>
    <label>Póliza</label>
    <nameField>
        <label>Número de póliza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pólizas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>