force-app/main/default/objects/Poliza__c/fields/Estatus_de_la_poliza__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_la_poliza__c</fullName>
    <formula>IF(
TODAY() &lt;=  Fin_de_la_poliza__c ,
&quot;En plazo&quot;,
&quot;Vencida&quot;
)</formula>
    <label>Estatus de la póliza</label>
    <type>Text</type>
</CustomField>