force-app/main/default/objects/Poliza__c/fields/Fin_de_la_poliza__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_la_poliza__c</fullName>
    <label>Fin de la póliza</label>
    <type>Date</type>
</CustomField>