force-app/main/default/objects/Poliza__c/fields/Inicio_de_la_poliza__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_la_poliza__c</fullName>
    <label>Inicio de la póliza</label>
    <type>Date</type>
</CustomField>