force-app/main/default/objects/Poliza__c/fields/Monto_total__c.field-meta.xml
<CustomField>
    <fullName>Monto_total__c</fullName>
    <formula>Oportunidad__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>