force-app/main/default/objects/Poliza__c/fields/Prima_total__c.field-meta.xml
<CustomField>
    <fullName>Prima_total__c</fullName>
    <label>Prima total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>